--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -260,15 +260,13 @@
     "    \n",
     "    def plot_simple_aggregate0(self, y_vars):\n",
     "        \"\"\"simple timeseries from self.aggregate0 columns\"\"\"\n",
-    "        plot = None\n",
     "        try:\n",
-    "            plot = sa.aggregate0.plot(x=['timestamp'],\n",
-    "                                      y=y_vars,\n",
-    "                                      style='-',\n",
-    "                                      figsize=(15, 10))\n",
+    "            sa.aggregate0.plot(x=['timestamp'],\n",
+    "                               y=y_vars,\n",
+    "                               style='-',\n",
+    "                               figsize=(15, 10))\n",
     "        except KeyError as err:\n",
-    "            print(\"KeyError: {}\".format(err))\n",
-    "        return plot"
+    "            print(\"KeyError: {}\".format(err))\n"
    ]
   },
   {
@@ -307,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.hostmeta"
@@ -317,6 +317,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -358,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['ldavg-1', 'ldavg-5', 'ldavg-15'])"
@@ -375,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['runq-sz', 'plist-sz'])"
@@ -397,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['memfree', 'memused', 'buffers', 'cached', 'swpused'])"
@@ -416,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['memused-percent', 'swpused-percent'])"
@@ -435,7 +444,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['pswpin', 'pswpout'])"
@@ -453,7 +464,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['proc'])"
@@ -469,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['cswch'])"
@@ -490,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['hugused', 'hugfree'])    "
@@ -506,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['hugused-percent'])"
@@ -524,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['tps'])"
@@ -541,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['rtps', 'wtps'])"
@@ -558,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['bread', 'bwrtn'])"
@@ -583,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['pgpgin', 'pgpgout', 'fault', 'majflt', 'pgfree', 'pgscank', 'pgscand', 'pgsteal'])"
@@ -599,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['vmeff-percent'])"
@@ -617,7 +646,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['dentunusd'])"
@@ -633,7 +664,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['file-nr'])"
@@ -649,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['inode-nr'])"
@@ -665,7 +700,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.plot_simple_aggregate0(['pty-nr'])"
